--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </h2>
             <p>Apaixonado por tecnologia e desenvolvimento, busco transformar ideias em projetos digitais práticos, criativos e de alto impacto. Tenho interesse em unir inovação e funcionalidade para entregar soluções modernas, eficientes e que realmente façam a diferença na experiência do usuário.</p>
             <div class="btn-sci">
-                <a href="#" class="btn">Baixe meu curriculum</a>
+                <a href="#" class="btn">Baixe meu CV</a>
                 <div class="sci">
                     <a href="https://github.com/Patex07"><i class='bxl  bx-github'  ></i> </a>
                     <a href="#"><i class='bxl  bx-linkedin'  ></i> </a>
@@ -392,4 +392,5 @@
 
     <script src="src/js/script.js"></script>
 </body>
+
 </html>
