Update1.1 index.html

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
                         <p>HTML5, CSS3, JavaScript</p>
                     </div>
                     <div class="live-github">
-                        <a href="https://patex07.github.io/Portfolio"><i class='bx  bx-arrow-left-stroke' ></i><span>Live Project</span></a>
-                        <a href="https://github.com/Patex07/Portfolio"><i class='bxl  bx-github'  ></i><span>Repositório Github</span></a>
+                        <a href="https://patex07.github.io/Portfolio-RafaelCruzdDosSantos"><i class='bx  bx-arrow-left-stroke' ></i><span>Live Project</span></a>
+                        <a href="https://github.com/Patex07/Portfolio-RafaelCruzdDosSantos"><i class='bxl  bx-github'  ></i><span>Repositório Github</span></a>
                     </div>
                 </div>
             </div>
@@ -394,3 +394,4 @@
 </body>
 
 </html>
+
